ingress-routes/minecraft-router.yml
# Sends all Minecraft TCP connection to the MC Router service, which will proxy the connection to the correct server via domain names
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-proxy
  namespace: games
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft-proxy
          port: 25565
