ingress-routes/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-dashboard
  namespace: network-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ingress.cluster.starsystem.dev`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
#      middlewares:
#        - name: authelia@kubernetescrd
