ingress-routes/wg-portal.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-portal
  namespace: network-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.cluster.starsystem.dev`)
      kind: Rule
      services:
        - name: dashboard
          port: 8888
